[package]
name = "async-anthropic"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
eventsource-client = "0.16"
futures = "0.3"
futures-util = "0.3"
thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"


[features]
default = []

messages = ["messages-types"]
messages-types = []
