[package]
name = "async-anthropic"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
eventsource-client = "0.16"
futures = "0.3"
futures-util = "0.3"
thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
validator = { version = "0.20.0", features = ["derive"] }
oas3-gen-support = "0.24.0"
regex = "1.12.2"
http = "1.4.0"
serde_with = "3.16.1"
reqwest = "0.13.1"
anyhow = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
bon = "3.8.2"

[dev-dependencies]

[build-dependencies]

[features]
default = ["_api"]

_api = []
messages = ["_api", "messages-types"]
messages-types = []