[package]
name = "async-anthropic"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
validator = { version = "0.20", features = ["derive"] }
oas3-gen-support = "0.24"
regex = "1.12"
http = "1.4"
serde_with = "3.16"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = { version = "0.6" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bon = "3.8"

[dev-dependencies]

[build-dependencies]

[features]
default = ["_api"]

_api = []
messages = ["_api", "messages-types"]
messages-types = []